# OpenFace

./: .gitignore  CMakeLists.txt  README.md
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/Utilities/: CMakeLists.txt
python/: CMakeLists.txt  detector.cpp  detector.hpp  pyOpenFaceStub.py  pyopenface.cpp  test.py
